Edited the code of the views, so they can be displayed properly on smaller devices.

--- a/Marketplace/Views/Account/Profile.cshtml
+++ b/Marketplace/Views/Account/Profile.cshtml
@@ -66,37 +66,13 @@ else
             <div class="row">
             @for (var j = 0; j < 4; j++) // I want 4 columns on current row
             {
-                @if (i+j==countAds-1 && j==0) // when we have 1 ad on last row, display it a certain way
-                {
-                    var ad = Model.ElementAt(i+j);
-
-                    <div class="card col-sm-3 border border-primary rounded p-0 mb-3 mx-1">
-                        <partial name="_PrivateAdvertisementColumnPartial" model=ad />
-                    </div>
-                    break;
-                }
-
-                @if (i+j==countAds-2 && j==0) // when we have 2 ads on last row, display them a certain way
-                {
-                    var ad1 = Model.ElementAt(i+j);
-                    var ad2 = Model.ElementAt(i+j+1);
-
-                    <div class="card col-sm-3 border border-primary rounded p-0 mb-3 mx-1">
-                        <partial name="_PrivateAdvertisementColumnPartial" model=ad1 />
-                    </div>
-                    <div class="card col-sm-3 border border-primary rounded p-0 mb-3 mx-1">
-                        <partial name="_PrivateAdvertisementColumnPartial" model=ad2 />
-                    </div>
-                    break;
-                }
-
                 @if (i+j==countAds) // stop displaying if we've reached the end
                 {
                     break;
                 }
 
                 var currentAd = Model.ElementAt(i+j);
-                <div class="card col-sm border border-primary rounded p-0 mb-3 mx-1">
+                <div class="card col-3 border border-primary rounded p-0 mb-3">
                 <partial name="_PrivateAdvertisementColumnPartial" model=currentAd />
                 </div>
             }
