--- a/Marketplace/Views/Home/Index.cshtml
+++ b/Marketplace/Views/Home/Index.cshtml
@@ -7,12 +7,29 @@
 <div class="container m-0 p-0">
     <div class="row p-0 m-0 mb-3 justify-content-center">
         <div class="col-5 m-0 p-0">
-            <input id="searchBar" class="form-control border-1 border-primary" placeholder="Search"/>
+            <input asp-for="SearchTerm" id="searchBar" class="form-control border-1 border-primary" placeholder="Search"/>
         </div>
         <div class="col-2 m-0 p-0 mx-1">
-            <select id="categoryDropDown" asp-items="@Model.CategoryDropDown" class="form-control text-center border-1 border-primary">
+            <select id="categoryDropDown" asp-items="@Model.CategoryDropDown" asp-for="CategoryId" class="form-control text-center border-1 border-primary">
                 <option value=-1>All</option>
             </select>
+        </div>
+        <div class="col-2 m-0 p-0 mx-1">
+            <select id="filterInput" asp-for="Filter" class="form-control text-center border-1 border-primary">
+                <option>New</option>
+                <option>Old</option>
+                <option>Cheapest</option>
+                <option>Most Expensive</option>
+            </select>
+        </div>
+        <div class="col-2 m-0 p-0 mx-1">
+            <input id="locationInput" asp-for="Location" class="form-control text-center border-1 border-primary" placeholder="Location"/>
+        </div>
+        <div class="col-2 m-0 p-0 mx-1">
+            <input class="form-control text-center border-1 border-primary" placeholder="Minimum Price"/>
+        </div>
+        <div class="col-2 m-0 p-0 mx-1">
+            <input class="form-control text-center border-1 border-primary" placeholder="Max Price"/>
         </div>
         <div class="col-1 m-0 p-0 text-center">
             <a id="searchButton" href="#" onclick="return searchFor();" class="btn btn-primary">Search</a>
