--- a/Marketplace/Views/Home/Index.cshtml
+++ b/Marketplace/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@ else
         }
     </div>
     <div class="text-center">
-        @for (var i = 0; i <= 10; i++)
+        @for (var i = 0; i < @Model.MaxCountPages; i++)
         {
             @if (i==@Model.PageNumber)
             {
