--- a/Marketplace/Views/Account/Profile.cshtml
+++ b/Marketplace/Views/Account/Profile.cshtml
@@ -81,7 +81,19 @@ else
 
                 var currentAd = Model.ElementAt(i+j);
                 <div class="card col-3 border border-primary rounded p-0 mb-3">
-                <partial name="_PrivateAdvertisementColumnPartial" model=currentAd />
+                    <img src="data:image;base64,@currentAd.ImageInBase64" class="card-img-top">
+
+                    <div class="card-body text-center">
+                        <h6 class="card-title">@currentAd.Title</h6>
+                    </div>
+                    <div class="card-footer bg-light">
+                        <div class="text-center">
+                            <h6 class="font-s">@currentAd.Price EUR</h6>
+                            <a class="btn btn-sm btn-dark" asp-action="Show" asp-controller="Advertisement" asp-route-id="@currentAd.Id">SHOW</a>
+                        </div>
+                    </div>
+                        <h6 class="bg-warning text-dark p-1 m-0 font-s">@currentAd.Location</h6>
+                        <h6 class="bg-success text-white p-1 m-0 font-s">@currentAd.Category</h6>
                 </div>
             }
             </div>
