--- a/Marketplace/Views/Home/Index.cshtml
+++ b/Marketplace/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container m-0 p-0">
     <div class="row p-0 m-0 mb-3 justify-content-center">
-        <div class="col-5 m-0 p-0">
+        <div class="col-5 m-0 p-0 mx-1">
             <input asp-for="SearchTerm" id="searchBar" class="form-control border-1 border-primary" placeholder="Search"/>
         </div>
         <div class="col-2 m-0 p-0 mx-1">
@@ -25,13 +25,15 @@
         <div class="col-2 m-0 p-0 mx-1">
             <input id="locationInput" asp-for="Location" class="form-control text-center border-1 border-primary" placeholder="Location"/>
         </div>
+    </div>
+    <div class="row p-0 m-0 mb-3 justify-content-center">
         <div class="col-2 m-0 p-0 mx-1">
             <input id="minimumPriceInput" asp-for="MinimumPrice" class="form-control text-center border-1 border-primary" placeholder="Minimum Price"/>
         </div>
         <div class="col-2 m-0 p-0 mx-1">
             <input id="maximumPriceInput" asp-for="MaximumPrice" class="form-control text-center border-1 border-primary" placeholder="Max Price"/>
         </div>
-        <div class="col-1 m-0 p-0 text-center">
+        <div class="col-1 m-0 p-0 text-center mx-1">
             <a id="searchButton" href="#" onclick="return searchFor();" class="btn btn-primary">Search</a>
         </div>
     </div>
