Removed Privacy view link from nav bar. Edited Privacy view.

--- a/Marketplace/Views/Home/Privacy.cshtml
+++ b/Marketplace/Views/Home/Privacy.cshtml
@@ -3,4 +3,4 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>By registering you make your email public information. Anybody visiting your profile or advertisement can see it. In addition, you can also add a phone number to be displayed.</p>
