Users that have the Admin role, can now delete anybody's advertisements. Made a separate js file for the logic of showing/hiding the modal that is for deleting an advetisement.

--- a/Marketplace/Views/Account/MyAdvertisements.cshtml
+++ b/Marketplace/Views/Account/MyAdvertisements.cshtml
@@ -73,23 +73,5 @@ else
 
 @section Scripts
 {
-    <script defer src=~/js/loadPreviousImages.js></script>
-    <script src="~/js/imageManipulation.js"></script>
-    <script defer>
-        let deleteFormActionUrl = document.deleteAdForm.action;
-
-        function showDeleteAdModal(title,id) {
-            $('.adToDeleteTitle').text(title);
-
-            document.deleteAdForm.action=deleteFormActionUrl+"/"+id;
-
-            $('#deleteAdModal').modal('show');
-        }
-
-        function hideDeleteAdModal()
-        {
-            $('#deleteAdModal').modal('hide');
-            document.deleteAdForm.action=deleteFormActionUrl;
-        }
-    </script>
+    <script defer src="~/js/deleteAdvertisement.js"></script>
 }
