--- a/Marketplace/Views/Account/MyProfile.cshtml
+++ b/Marketplace/Views/Account/MyProfile.cshtml
@@ -1,4 +1,5 @@
-﻿@model Marketplace.ViewModels.MyProfileViewModel
+﻿@using Marketplace.Utility
+@model Marketplace.ViewModels.MyProfileViewModel
 
 @{
     var profilePictureSrc = "/noProfilePicture.png";
@@ -15,6 +16,10 @@
     }
 }
 
+@if (User.IsInRole(Helper.AdminRole))
+{
+    <h5 class="text-success">You are logged in as Admin</h5>
+}
 <form class="form-control border border-primary" method="post" asp-action="Update" asp-controller="Account" enctype='multipart/form-data'>
 <div class="container">
     <div class="row">
