Fixed a small typo.

--- a/Marketplace/Views/Account/Profile.cshtml
+++ b/Marketplace/Views/Account/Profile.cshtml
@@ -118,7 +118,7 @@ else
         
               </div>
               <div class="modal-body">
-                <p>You are about to delete one of your advertisements - "<span class="adToDeleteTitle"></span>". Are you sure about that?</p>
+                <p>You are about to delete - "<span class="adToDeleteTitle"></span>". Are you sure about that?</p>
               </div>
               <div class="modal-footer">
                 <a onclick="hideDeleteAdModal()" class="btn btn-secondary">Cancel</a>
