--- a/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
+++ b/Marketplace/Views/Shared/_LogInOrRegisterPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@inject Microsoft.AspNetCore.Identity.SignInManager<Marketplace.Models.ApplicationUser> _signInManager
+﻿@using Marketplace.Utility
+@inject Microsoft.AspNetCore.Identity.SignInManager<Marketplace.Models.ApplicationUser> _signInManager
 
 <ul class="navbar-nav flex-grow-1">
     <li class="nav-item">
@@ -12,6 +13,13 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="MyProfile">My Profile</a>
         </li>
+
+        if (User.IsInRole(Helper.AdminRole))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="AdminPanel">Admin Panel</a>
+            </li>
+        }
     }
 </ul>
 
@@ -27,13 +35,14 @@
     </ul>
 
 }
-else{
-<ul class="navbar-nav">
-    <li class="nav-item">
-        <a class="nav-link text-black" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-    </li>
-    <li class="nav-item ">
-        <a class="nav-link text-black" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-    </li>
-</ul>
+else
+{
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="nav-link text-black" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link text-black" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+        </li>
+    </ul>
 }
